--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   <!-- Placeholder for the chart -->
   <canvas id="energyChart" width="400" height="200"></canvas>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
